[package]
name = "combined2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
itertools = "0.10.5"
line_drawing = "1.0.0"
nom = "7.1.3"
pathfinding = "4.2.1"
rand = "0.8.5"
regex = "1.11.1"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.3.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
