[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
env_logger = "0.10.0"
getrandom = "0.2.8"
line_drawing = "1.0.0"
log = "0.4.17"
pixels = "0.11.0"
rand = "0.8.5"
randomize = "3.0.1"
winit = "0.28.3"
winit_input_helper = "0.14.0"
